[tool.poetry]
name = "arunapi"
version = "0.1.0"
description = ""
authors = ["Tom Whitwell <tom@whi.tw>"]

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.11.1"
gunicorn = "^20.1.0"
redis = "^4.2.2"
fastapi = "^0.75.2"
uvicorn = "^0.17.6"
postcode-validator = "^0.0.4"
httpx = "^0.22.0"
email-validator = "^1.2.0"
ics = "^0.7"
cashews = {extras = ["redis"], version = "^4.2.1"}
opentelemetry-api = "^1.15.0"
opentelemetry-sdk = "^1.15.0"

[tool.poetry.group.dev.dependencies]
pytest = "^5.2"
black = "^22.3.0"
flake8 = "^4.0.1"
isort = "^5.11.4"
opentelemetry-instrumentation = "^0.36b0"

[tool.poetry.scripts]
dev = "arunapi.dev:run_dev"
bump_data__patch = "ci.bump_version:bump_patch"
bump_data__minor = "ci.bump_version:bump_minor"
bump_data__major = "ci.bump_version:bump_major"

[tool.poetry.group.ci.dependencies]
semver = "^2.13.0"
gitpython = "^3.1.29"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
